--- a/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
+++ b/dondEducar/dondEducar/Views/Shared/_Layout.cshtml
@@ -20,17 +20,26 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
 </head>
 <body>
-    <div class="body-wrapper">
-        <header>
-            <ul class="nav nav-pills barra-de-navegacion">
-                @*<li>@Html.ActionLink("Iniciar Sesión", "ExternalLoginsList", "Account", new { returnUrl = Request.RawUrl }, new { @id = "login" })</li>*@
-                @*<li><fb:login-button>Login with Facebook</fb:login-button></li>*@
-                <li><a href="@Session["AutenticateUrl"]">Sign In</a></li>
-                <li>@Html.ActionLink("Contacto", "Contacto", "Home")</li>
-                <li>@Html.ActionLink("Informacion", "Informacion", "Home")</li>
-                <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Menu</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="@Url.Action("Index", "Home")"><strong>dondeducar</strong></a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="@Session["AutenticateUrl"]"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Iniciar sesión</a></li>
+                <li><a href="@Url.Action("Contacto", "Home")"><span class="glyphicon glyphicon-earphone"></span>&nbsp;Contacto</a></li>
+                <li><a href="@Url.Action("Informacion", "Home")"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Información</a></li>
             </ul>
-        </header>
+        </div>
+    </nav>
+
+    <div class="body-wrapper">
         <div id="body" class="content-wrapper">
 
             <!-- Modal -->
@@ -57,19 +66,18 @@
         </div>
         <div class="push"></div>
     </div>
-    <footer>
-        <a class="zen-validate-html" title="Check the validity of this site’s HTML" href="http://validator.w3.org/check/referer">HTML</a>
-        <a class="zen-validate-css" title="Check the validity of this site’s CSS" href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>
-        <a class="zen-license" title="View the Creative Commons license of this site: Attribution-NonCommercial-ShareAlike." href="http://creativecommons.org/licenses/by-nc-sa/3.0/">CC</a>
-        <a class="zen-accessibility" title="Read about the accessibility of this site" href="http://mezzoblue.com/zengarden/faq/#aaa">A11y</a>
-        <a class="zen-github" title="Fork this site on Github" href="https://github.com/mezzoblue/csszengarden.com">GH</a>
-        <div class="float-left">
-            <p>&copy; @DateTime.Now.Year - Bs Apps</p>
-        </div>
-    </footer>
+    <div id="footer">
+        <div class="container">
+            <div class="pull-right">
+                <h3 style="color:whitesmoke;">Hombre, pueblo, Nación, Estado, todo... todo está en los humildes bancos de la escuela.</h3>
+                <span class="label label-primary pull-right">Domingo Faustino Sarmiento</span>
+            </div>
 
+            <p class="text-muted"><strong>dondeducar</strong> - BsApps - @DateTime.Now.Year.</p>
+        </div>
+    </div>
     <script type="text/javascript">
-       
+
         //Mis cosas
         $(document).ready(function () {
 
